using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Char1Actor : MonoBehaviour
{

    public void MeleeSide()
    {

    }

    public void MeleeDown()
    {

    }

    public void MeleeUp()
    {

    }

    public void RangeSide()
    {

    }

    public void RangeDown()
    {

    }

    public void RangeUp()
    {

    }
}
